--- a/index.html
+++ b/index.html
@@ -46,20 +46,20 @@
 		<!-- Place the below code anywhere you like in the <head> (higher is better) -->
 		<script>window.AdSlots = window.AdSlots || {cmd: [], disableScripts: ['gpt']};</script>
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-8f3741a6.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_layout-41d8fafb.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-007686a7.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/sendEvent-30abcd50.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-8f0b2d2c.js">
+		<link rel="modulepreload" href="./_app/immutable/start-9ced2b9e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-7126a34b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-c091dfce.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a131feb9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-282def3e.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-707ce825.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-8739e35b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-865c4fb4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-64f496f9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Scripts-3c2f2e47.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_page.ts-dc85b7cd.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-fca24c55.js"><title>Terastal Calculator - Best Pokemon for Tera Raids</title><!-- HEAD_svelte-2d9auo_START --><script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-da46b06b.js"><title>Terastal Calculator - Best Pokemon for Tera Raids</title><!-- HEAD_svelte-2d9auo_START --><script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
 	<script async src="https://kumo.network-n.com/dist/app.js" site="terastal"></script>
 	
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
@@ -102,7 +102,7 @@
 									<form class="pokemon-search-form svelte-16bne81"><div class="row"><div class="col-12 px-0" data-selected="0"><small>Filter search by type</small><br>
 												<button type="button" title="Normal" data-type="Normal" data-selected="false" class="type type__symbol-small" value="Normal"></button><button type="button" title="Fire" data-type="Fire" data-selected="false" class="type type__symbol-small" value="Fire"></button><button type="button" title="Water" data-type="Water" data-selected="false" class="type type__symbol-small" value="Water"></button><button type="button" title="Electric" data-type="Electric" data-selected="false" class="type type__symbol-small" value="Electric"></button><button type="button" title="Grass" data-type="Grass" data-selected="false" class="type type__symbol-small" value="Grass"></button><button type="button" title="Ice" data-type="Ice" data-selected="false" class="type type__symbol-small" value="Ice"></button><button type="button" title="Fighting" data-type="Fighting" data-selected="false" class="type type__symbol-small" value="Fighting"></button><button type="button" title="Poison" data-type="Poison" data-selected="false" class="type type__symbol-small" value="Poison"></button><button type="button" title="Ground" data-type="Ground" data-selected="false" class="type type__symbol-small" value="Ground"></button><button type="button" title="Flying" data-type="Flying" data-selected="false" class="type type__symbol-small" value="Flying"></button><button type="button" title="Psychic" data-type="Psychic" data-selected="false" class="type type__symbol-small" value="Psychic"></button><button type="button" title="Bug" data-type="Bug" data-selected="false" class="type type__symbol-small" value="Bug"></button><button type="button" title="Rock" data-type="Rock" data-selected="false" class="type type__symbol-small" value="Rock"></button><button type="button" title="Ghost" data-type="Ghost" data-selected="false" class="type type__symbol-small" value="Ghost"></button><button type="button" title="Dragon" data-type="Dragon" data-selected="false" class="type type__symbol-small" value="Dragon"></button><button type="button" title="Dark" data-type="Dark" data-selected="false" class="type type__symbol-small" value="Dark"></button><button type="button" title="Steel" data-type="Steel" data-selected="false" class="type type__symbol-small" value="Steel"></button><button type="button" title="Fairy" data-type="Fairy" data-selected="false" class="type type__symbol-small" value="Fairy"></button><button type="button" title="Reset Type Filter" class="reset-small">Reset</button>
 												</div>
-											<div class="col-12 px-0"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-610 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
+											<div class="col-12 px-0"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-832 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
   <div class="input-container svelte-75ckfb">
     <input type="text" class="form-control form-control-lg svelte-75ckfb" id="" autocomplete="off" placeholder="Search Pokémon..." title="Pokémon Search" tabindex="0">
     <span class="autocomplete-clear-button svelte-75ckfb"><!-- HTML_TAG_START -->&#10006;<!-- HTML_TAG_END --></span></div>
@@ -339,17 +339,16 @@
 										<th>Power</th>
 										<th>Category</th></tr>
 									<tr><td colspan="3" class="error"><!-- HTML_TAG_START -->Please select a Pokémon.<!-- HTML_TAG_END --></td></tr></tbody></table></div>
-					<div class="row"><h4 class="jumbotron-heading">Best Counter Pokémon (Beta)</h4>
+					<div class="row"><h4 class="jumbotron-heading">Best Counter Pokémon</h4>
 							
 							<table class="table table-bordered table-sm table-striped table-pokemon-suggestions" style="table-layout: !fixed;"><thead><td colspan="7" class="error"><!-- HTML_TAG_START -->Please select a Pokémon.<!-- HTML_TAG_END --></td></thead>
 								<tbody></tbody></table>
 							<p><span><div class="badge score-bg" style="display: inline-block; width: 50px" data-score="10"><span>Δ 10</span></div></span> *Δ (delta) means e.g. the difference between your PKMNs STAT and the Raid Pokemons counter STAT (e.g. your ATT vs enemies DEF). A higher Δ is better.</p></div></div>
 
-				<div class="col-12 col-lg-6"><div class="row"><h4 class="jumbotron-heading">Best Abilities (Beta)</h4>
+				<div class="col-12 col-lg-6"><div class="row"><h4 class="jumbotron-heading">Best Abilities</h4>
 						<table class="table table-bordered table-sm table-striped"><thead><tr><th>Ability</th>
 									<th>Description</th>
-									<th>Good against</th>
-									<th>Score</th></tr></thead>
+									<th>Good against</th></tr></thead>
 							<tbody><tr><td colspan="4" class="error"><!-- HTML_TAG_START -->Please select a Pokémon.<!-- HTML_TAG_END --></td></tr></tbody></table></div>
 
 
@@ -382,14 +381,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="128rmse">
-			import { start } from "./_app/immutable/start-8f0b2d2c.js";
+		<script type="module" data-sveltekit-hydrate="1qilbo">
+			import { start } from "./_app/immutable/start-9ced2b9e.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="128rmse"]').parentNode,
-				version: "1676648977793",
+				target: document.querySelector('[data-sveltekit-hydrate="1qilbo"]').parentNode,
+				version: "1676735655882",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
