--- a/tera-type-calculator.html
+++ b/tera-type-calculator.html
@@ -59,20 +59,20 @@
 		<!-- Place the below code anywhere you like in the <head> (higher is better) -->
 		<script>window.AdSlots = window.AdSlots || {cmd: [], disableScripts: ['gpt']};</script>
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-eddf3901.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/_page-f92fbb69.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_layout-121f180c.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_page-09b3c40f.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/sendEvent-30abcd50.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-6f6e5a1f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-8c126543.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-731bec51.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-88dda814.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores-ccc07371.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/tera-type-calculator.html/_page.svelte-c15d7900.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Scripts-fa581567.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-0e4f4d23.js">
+		<link rel="modulepreload" href="./_app/immutable/start-465caf12.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-df1b6393.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-9e424c52.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-30d0f3fb.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores-625d1a5d.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/tera-type-calculator.html/_page.svelte-0c871011.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Scripts-d73a1027.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-92d9a648.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-64f496f9.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/tera-type-calculator.html/_page.ts-94291217.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-90a7f2f4.js"><title>Terastal Calculator - Best Tera Type Counter</title><!-- HEAD_svelte-12z4zbv_START --><link rel="canonical" href="https://terastal.net/tera-type-calculator.html"><script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-e94d8ac7.js"><title>Terastal Calculator - Best Tera Type Counter</title><!-- HEAD_svelte-1oik806_START --><script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
 	<script async src="https://kumo.network-n.com/dist/app.js" site="terastal"></script>
 	
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
@@ -80,7 +80,7 @@
 		function gtag() { dataLayer.push(arguments); }
 		gtag('js', new Date());
 		gtag('config', 'G-8L9PXM6PDZ');
-	</script><!-- HEAD_svelte-12z4zbv_END -->
+	</script><!-- HEAD_svelte-1oik806_END -->
 	</head>
 
 	<body data-sveltekit-preload-data="hover">
@@ -120,7 +120,7 @@
 															<div class="col-12 sm-12 col-lg-10 px-0" data-selected="false"><button name="type2" type="button" title="Normal" data-type="Normal" data-selected="false"  class="type type__symbol-big" value="Normal"></button><button name="type2" type="button" title="Fire" data-type="Fire" data-selected="false"  class="type type__symbol-big" value="Fire"></button><button name="type2" type="button" title="Water" data-type="Water" data-selected="false"  class="type type__symbol-big" value="Water"></button><button name="type2" type="button" title="Electric" data-type="Electric" data-selected="false"  class="type type__symbol-big" value="Electric"></button><button name="type2" type="button" title="Grass" data-type="Grass" data-selected="false"  class="type type__symbol-big" value="Grass"></button><button name="type2" type="button" title="Ice" data-type="Ice" data-selected="false"  class="type type__symbol-big" value="Ice"></button><button name="type2" type="button" title="Fighting" data-type="Fighting" data-selected="false"  class="type type__symbol-big" value="Fighting"></button><button name="type2" type="button" title="Poison" data-type="Poison" data-selected="false"  class="type type__symbol-big" value="Poison"></button><button name="type2" type="button" title="Ground" data-type="Ground" data-selected="false"  class="type type__symbol-big" value="Ground"></button><button name="type2" type="button" title="Flying" data-type="Flying" data-selected="false"  class="type type__symbol-big" value="Flying"></button><button name="type2" type="button" title="Psychic" data-type="Psychic" data-selected="false"  class="type type__symbol-big" value="Psychic"></button><button name="type2" type="button" title="Bug" data-type="Bug" data-selected="false"  class="type type__symbol-big" value="Bug"></button><button name="type2" type="button" title="Rock" data-type="Rock" data-selected="false"  class="type type__symbol-big" value="Rock"></button><button name="type2" type="button" title="Ghost" data-type="Ghost" data-selected="false"  class="type type__symbol-big" value="Ghost"></button><button name="type2" type="button" title="Dragon" data-type="Dragon" data-selected="false"  class="type type__symbol-big" value="Dragon"></button><button name="type2" type="button" title="Dark" data-type="Dark" data-selected="false"  class="type type__symbol-big" value="Dark"></button><button name="type2" type="button" title="Steel" data-type="Steel" data-selected="false"  class="type type__symbol-big" value="Steel"></button><button name="type2" type="button" title="Fairy" data-type="Fairy" data-selected="false"  class="type type__symbol-big" value="Fairy"></button><button type="button" title="Reset Type 2" class="reset">Reset</button></div>
 															<div class="col-12 sm-12 col-lg-2 px-0"><div class="selected-type"></div></div>
 															<div class="col-12 sm-12 col-lg-12 px-0 pt-3">Or select your lovely Pokémon</div>
-															<div class="col-12 px-0"><form class="pokemon-search-form"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-486 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
+															<div class="col-12 px-0"><form class="pokemon-search-form"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-467 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
   <div class="input-container svelte-75ckfb">
     <input type="text" class="form-control form-control-lg svelte-75ckfb" id="" autocomplete="off" placeholder="Search Pokémon..." tabindex="0">
     <span class="autocomplete-clear-button svelte-75ckfb"><!-- HTML_TAG_START -->&#10006;<!-- HTML_TAG_END --></span></div>
@@ -145,7 +145,7 @@
           </div>
 
       
-        <div class="autocomplete-list-item-no-results svelte-75ckfb">...422
+        <div class="autocomplete-list-item-no-results svelte-75ckfb">...423
               items not shown</div>
       </div></div>
 
@@ -184,14 +184,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="eka1hn">
-			import { start } from "./_app/immutable/start-6f6e5a1f.js";
+		<script type="module" data-sveltekit-hydrate="g6rd6t">
+			import { start } from "./_app/immutable/start-465caf12.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="eka1hn"]').parentNode,
-				version: "1677518369800",
+				target: document.querySelector('[data-sveltekit-hydrate="g6rd6t"]').parentNode,
+				version: "1678612333075",
 				hydrate: {
 					node_ids: [0, 4],
 					data: [null,null],
